crates/tokmd-format/tests/analysis_format/snapshots/analysis_format__analysis_snapshot_w58__w58_analysis_md_archetype_with_topics.snap
---
source: crates/tokmd-format/tests/analysis_format/analysis_snapshot_w58.rs
assertion_line: 495
expression: "text(render(&r, AnalysisFormat::Md).unwrap())"
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`

## Archetype

- Kind: `monorepo`
- Evidence: `Cargo.toml workspace`, `crates/`, `multiple Cargo.toml`

## Topics

- Overall: `parsing, formatting`
- `core`: analysis
